Set aspect ratio on album artwork avoiding layout shift

--- a/src/assets/stylesheets/components/_release.css
+++ b/src/assets/stylesheets/components/_release.css
@@ -7,6 +7,11 @@
 
 .release-artwork {
   margin: 0;
+
+  img {
+    aspect-ratio: 1;
+    display: block;
+  }
 }
 
 .bandcamp-player {
